Replaced beta.bowlrms.com with bowlrms.com

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -55,7 +55,7 @@
   </div>
 
   <div id="webview-container">
-    <webview id="bowlrms-view" src="http://localhost:3000/login" partition="persist:bowlrms" allowpopups></webview>
+    <webview id="bowlrms-view" src="https://bowlrms.com//management/login" partition="persist:bowlrms" allowpopups></webview>
   </div>
 
   <script src="./renderer.js"></script>
